[az] update from Pootle (firefox-beta)

--- a/az/browser/chrome/browser/devtools/markers.properties
+++ b/az/browser/chrome/browser/devtools/markers.properties
@@ -33,6 +33,7 @@ marker.fieldFormat=%1$S (%2$S)
 # Strings used in the waterfall sidebar as property names.
 
 # General marker fields
+marker.field.start=Başla:
 marker.field.end=Son:
 marker.field.duration=Vaxt:
 # Field names for stack values
@@ -51,6 +52,7 @@ marker.field.type=Format:
 
 # LOCALIZATION NOTE (marker.gcreason.label.*):
 # These strings are used to give a concise but readable description of a GC reason.
+marker.gcreason.label.LAST_DITCH=Yaddaş kifayət deyil
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
