--- a/az/browser/chrome/browser/devtools/webconsole.properties
+++ b/az/browser/chrome/browser/devtools/webconsole.properties
@@ -24,6 +24,7 @@ update.button=Yeniləmə
 # LOCALIZATION NOTE (NetworkPanel.deltaDurationMS): this string is used to
 # show the duration between two network events (e.g request and response
 # header or response header and response body). Parameters: %S is the duration.
+NetworkPanel.durationMS=%Sms
 
 # LOCALIZATION NOTE (NetworkPanel.imageSizeDeltaDurationMS): this string is
 # used to show the duration between the response header and the response body
@@ -106,6 +107,7 @@ timeEnd=%1$S: %2$Sms
 
 # LOCALIZATION NOTE (remoteWebConsolePromptTitle): the title displayed on the
 # Web Console prompt asking for the remote host and port to connect to.
+remoteWebConsolePromptTitle=Uzaq Əlaqə
 
 # LOCALIZATION NOTE (remoteWebConsolePromptMessage): the message displayed on
 # the Web Console prompt asking for the remote host and port to connect to.
