--- a/az/browser/chrome/browser/loop/loop.properties
+++ b/az/browser/chrome/browser/loop/loop.properties
@@ -55,8 +55,10 @@ problem_accessing_account=Hesabınıza daxil olarkən problem yaşandı
 ## the appropriate action.
 retry_button=Təkrar yoxla
 
+share_email_subject6=Mənimlə görüntülü söhbətə qoşul
 ## LOCALIZATION NOTE (share_email_body6): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
+share_email_body6=Söhbətə indi qoşulmaq üçün Firefox Hello keçidinə klikləyin: {{callUrl}}
 ## LOCALIZATION NOTE (share_email_body_context2): In this item, don't translate
 ## the part between {{..}} and leave the \n\n part alone.
 ## LOCALIZATION NOTE (share_email_footer): Common footer content for both email types
