--- a/az/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/az/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,6 +99,7 @@ loop-call-button3.label = Hello
 loop-call-button3.tooltiptext = Söhbət başlat
 # LOCALIZATION NOTE(loop-call-button3-pb.tooltiptext): Shown when the button is
 # placed inside a Private Browsing window. %S is the value of loop-call-button3.label.
+loop-call-button3-pb.tooltiptext = %S Məxfi Səyahət zamanı istifadə oluna bilməz
 
 social-share-button.label = Bu Səhifəni Paylaş
 social-share-button.tooltiptext = Bu səhifəni paylaş
