--- a/uz/browser/chrome/browser/devtools/markers.properties
+++ b/uz/browser/chrome/browser/devtools/markers.properties
@@ -18,15 +18,26 @@ marker.label.styles=Uslubni qayta chamalash
 marker.label.reflow=Tartib
 marker.label.paint=Bo‘yash
 marker.label.javascript=Funksiya chaqiruvi
+marker.label.parseHTML=HTML’ni ajratkich
+marker.label.parseXML=XML ajratkich
 marker.label.domevent=DOM hodisasi
 marker.label.consoleTime=Terminal
 marker.label.garbageCollection=Qo‘shimcha GC
+marker.label.garbageCollection.nonIncremental=Ortmaydigan GC
+marker.label.cycleCollection=Jamlanmani aylantirish
+marker.label.cycleCollection.forgetSkippable=CC Graph kamaytirgich
+marker.label.timestamp=Vaqt belgilari
 marker.label.unknown=Noma’lum
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
 # These strings are displayed as JavaScript markers that have special
 # reasons that can be translated.
+marker.label.javascript.scriptElement=Skript teg
+marker.label.javascript.promiseCallback=Promise Callback
+marker.label.javascript.promiseInit=Promise Init
 marker.label.javascript.workerRunnable=Worker
+marker.label.javascript.jsURI=JavaScript URI
+marker.label.javascript.eventHandler=Hodisalarni qayta ishlagich
 
 # LOCALIZATION NOTE (marker.fieldFormat):
 # Some timeline markers come with details, like a size, a name, a js function.
@@ -54,8 +65,11 @@ marker.field.consoleTimerName=Taymer nomi:
 marker.field.DOMEventType=Hodisa turi:
 marker.field.DOMEventPhase=Bosqich:
 # Non-incremental cause for a Garbage Collection marker
+marker.field.nonIncrementalCause=Ko‘paymaslik sababi:
 # For "Recalculate Style" markers
+marker.field.restyleHint=Restyle Hint:
 # General "reason" for a marker (JavaScript, Garbage Collection)
+marker.field.causeName=Sababi:
 # General "type" for a marker (Cycle Collection, Garbage Collection)
 marker.field.type=Turi:
 
@@ -67,8 +81,17 @@ marker.value.DOMEventBubblingPhase=Pufaklash
 
 # LOCALIZATION NOTE (marker.gcreason.label.*):
 # These strings are used to give a concise but readable description of a GC reason.
+marker.gcreason.label.API=API Call
+marker.gcreason.label.EAGER_ALLOC_TRIGGER=Eager Allocation Trigger
+marker.gcreason.label.DESTROY_RUNTIME=O‘chirish
+marker.gcreason.label.DESTROY_CONTEXT=O‘chirish
+marker.gcreason.label.LAST_DITCH=Xotira yetmaydi
+marker.gcreason.label.TOO_MUCH_MALLOC=Juda ko‘p bayt ajratildi
+marker.gcreason.label.ALLOC_TRIGGER=Juda ko‘p ajratildi
 marker.gcreason.label.OUT_OF_NURSERY=Enaga – to‘la
+marker.gcreason.label.CC_WAITING=Jamlanma halqasi tomonidan majburiy qilingan
 marker.gcreason.label.DOM_IPC=IPC
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
+marker.gcreason.description.MEM_PRESSURE=Juda past xotira mavjud edi.
