--- a/uz/security/manager/chrome/pipnss/pipnss.properties
+++ b/uz/security/manager/chrome/pipnss/pipnss.properties
@@ -282,7 +282,7 @@ certErrorMismatchMultiple=Sertifikat faqat quyidagi nomlarga to‘g‘ri keladi:
 certErrorMismatchNoNames=Sertifikat birorta ham server nomiga to‘g‘ri kelmaydi.
 
 # LOCALIZATION NOTE (certErrorExpiredNow): Do not translate %1$S (date+time of expired certificate) or %2$S (current date+time)
-certErrorExpiredNow=Sertifikat %1$Sda eskirgan. Hozirgi vaqt esa: %2$S.
+certErrorExpiredNow=Sertifikatning eskirgan sanasi: %1$S. Hozirgi vaqt esa: %2$S.
 # LOCALIZATION NOTE (certErrorNotYetValidNow): Do not translate %1$S (date+time certificate will become valid) or %2$S (current date+time)
 certErrorNotYetValidNow=Sertifikat %1$S’gacha yaroqli emas. Hozirgi vaqt esa: %2$S.
 
