--- a/uz/toolkit/chrome/global/aboutTelemetry.properties
+++ b/uz/toolkit/chrome/global/aboutTelemetry.properties
@@ -5,7 +5,7 @@
 # Note to translators:
 # - %1$S will be replaced by brandFullName
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
-pageSubtitle = Ushbu sahifa telemetriya tomonidan yigʻilgan moslash va foydalanish, qurilma, ishlash tezligi haqidagi ma`lumotlarni koʻrsatadi. Ushbu ma`lumot  %1$Sga %2$Sni yaxshilashda yordam berish uchun joʻnatildi.
+pageSubtitle = Ushbu sahifa telemetriya tomonidan yigʻilgan ishlash tezligi, qurilma, foydalanish va moslash haqidagi ma`lumotlarni koʻrsatadi. Ushbu ma’lumot %1$S kompaniysiga %2$S brauzerini yaxshilashda yordam berish uchun joʻnatildi.
 
 generalDataTitle = Umumiy ma’lumot
 
