[uz] update from Pootle (firefox)

--- a/uz/browser/chrome/browser/browser.properties
+++ b/uz/browser/chrome/browser/browser.properties
@@ -327,6 +327,7 @@ identity.unknown.tooltip=Ushbu veb sahifa ma’lumotni tasdiqdan o‘tkaza olmay
 # LOCALIZATION NOTE (trackingProtection.intro.description): %S is brandShortName
 # LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
 
+trackingProtection.icon.activeTooltip=Kuzatishga urinishlar bloklandi
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Sahifa xatcho‘plarga qo‘shildi
@@ -396,6 +397,7 @@ safebrowsing.notAForgeryButton.accessKey=q
 safebrowsing.reportedAttackSite=Hujumkor sayt haqida xabar berildi!
 safebrowsing.notAnAttackButton.label=Bu hujumkor sayt emas…
 safebrowsing.notAnAttackButton.accessKey=h
+safebrowsing.reportedUnwantedSite=Shubhali dasturiy ta’minot sayti haqida ma’lumot berildi!
 
 # Ctrl-Tab
 # LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
@@ -726,4 +728,5 @@ readingList.promo.firstUse.readerView.body = Chalg‘ituvchilarni olib tashlang,
 # on the pre-release channels. They won't be used in release but they will likely be used in
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
+e10s.offerPopup.highlight2 = Nosozliklar kamaydi
 
