--- a/az/browser/chrome/browser/loop/loop.properties
+++ b/az/browser/chrome/browser/loop/loop.properties
@@ -61,7 +61,9 @@ share_email_subject6=Mənimlə görüntülü söhbətə qoşul
 share_email_body6=Söhbətə indi qoşulmaq üçün Firefox Hello keçidinə klikləyin: {{callUrl}}
 ## LOCALIZATION NOTE (share_email_body_context2): In this item, don't translate
 ## the part between {{..}} and leave the \n\n part alone.
+share_email_body_context2=Mənimlə video söhbətə qoşul. Qoşulmaq üçün Firefox Hello keçidinə klikləyin:{{callUrl}}\n\nSöhbətimizdə bunu müzakirə edək: {{title}}
 ## LOCALIZATION NOTE (share_email_footer): Common footer content for both email types
+share_email_footer=\n\n________\nFirefox Hello ilə pulsuz video söhbət başladın və qoşulun. Hər yerdə, hər kəslə asan şəkildə video söhbət edin. Endirmək ya da qeydiyyat tələb etmir. Daha ətraflı http://www.firefox.com/hello ünvanında
 ## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
 ## between {{..}}. Please keep the text below 117 characters to make sure it fits
 ## in a tweet.
@@ -128,8 +130,10 @@ import_contacts_success_message={{total}} əlaqə uğurla idxal edildi.;{{total}
 sync_contacts_button=Əlaqələri sinxronlaşdır
 ## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading=Hələlik əlaqəniz yoxdur
 ## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add=İdxal et və ya əlaqə əlavə et
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -142,14 +146,17 @@ import_failed_support_button=Kömək
 remove_contact_menu_button2=Əlaqəni Sil…
 ## LOCALIZATION NOTE(remove_contact_title): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button3=Əlaqəni Sil
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=Bu əlaqəni silmək istədiyinizə əminsiniz?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Əlaqəni Sil
 confirm_delete_contact_cancel_button=Ləğv et
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
+contact_list_title=ƏLAQƏLƏRİM
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
@@ -210,6 +217,7 @@ active_screenshare_button_title=Paylaşmanı dayandır
 inactive_screenshare_button_title=Ekranını paylaş
 share_tabs_button_title2=Vərəqlərinizi Paylaşın
 share_windows_button_title=Başqa pəncərələri paylaş
+self_view_hidden_message=Öz görünüşünüz gizlidir amma hələ də göndərilir. Görmək üçün pəncərinin ölçüsünü dəyişin
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
