[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/devtools/markers.properties
+++ b/uz/browser/chrome/browser/devtools/markers.properties
@@ -89,9 +89,20 @@ marker.gcreason.label.LAST_DITCH=Xotira yetmaydi
 marker.gcreason.label.TOO_MUCH_MALLOC=Juda ko‘p bayt ajratildi
 marker.gcreason.label.ALLOC_TRIGGER=Juda ko‘p ajratildi
 marker.gcreason.label.OUT_OF_NURSERY=Enaga – to‘la
+marker.gcreason.label.MEM_PRESSURE=Past xotira
 marker.gcreason.label.CC_WAITING=Jamlanma halqasi tomonidan majburiy qilingan
+marker.gcreason.label.CC_FORCED=Jamlanma halqasi tomonidan majburiy qilingan
+marker.gcreason.label.LOAD_END=Sahifani yuklash tugadi
+marker.gcreason.label.PAGE_HIDE=Orqa fonga o‘tkazildi
 marker.gcreason.label.DOM_IPC=IPC
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
+marker.gcreason.description.DESTROY_RUNTIME=Firefox JavaScript ishga tushish vaqtini buzgan va o‘chirishdan oldin so‘nggi chiqindi to‘lplami bo‘lgan.
+marker.gcreason.description.DESTROY_CONTEXT=Firefox JavaScript ishga tushish vaqtini buzgan va o‘chirishdan oldin so‘nggi chiqindi to‘plami bo‘lgan.
+marker.gcreason.description.LAST_DITCH=JavaScript ajratishga urinmoqda, ammo hech qanday xotira mavjud emas. ToAjratish uchun xotirani bo‘shatish kabi to‘liq yig‘ilga chiqindini to‘plang.
 marker.gcreason.description.MEM_PRESSURE=Juda past xotira mavjud edi.
+marker.gcreason.description.CC_WAITING=Halqa jamlagichi chiqindi yig‘ishni so‘ramoqda.
+marker.gcreason.description.PAGE_HIDE=Ichki oyna yoki oyna orqa fonga o‘tkazilgan.
+marker.gcreason.description.NSJSCONTEXT_DESTROY=Firefox JavaScript ishga tushish vaqtini buzgan va o‘chirishdan oldin so‘nggi chiqindi to‘lplami bo‘lgan.
+marker.gcreason.description.USER_INACTIVE=Foydalanuvchi uzoq vaqt nofaol bo‘lgan. Firefox u ogohlantirilmagan bo‘lganda GC bajarish imkoniyatini qo‘lga oladi.
