--- a/uz/dom/chrome/accessibility/mac/accessible.properties
+++ b/uz/dom/chrome/accessibility/mac/accessible.properties
@@ -26,7 +26,9 @@ tab     =       ichki oyna
 term    =       shart
 definition =    aniqlash
 # The Role Description for an input type="search" text field
+searchTextField = matn maydonidan izlash
 # The Role Description for WAI-ARIA Landmarks
+application =   ilova dasturlar
 search  =       izlash
 banner  =       banner
 navigation =    kuzatish
@@ -35,6 +37,9 @@ content =       kontent
 main    =       asosiy
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      ogohlantirish
+alertDialog =      signal oynasi
+article     =      maqola
 document    =      hujjat
+log         =      jurnal
 note        =      eslatma
 separator    =      ajratgich\u0020
