--- a/uz/webapprt/webapprt/overrides/dom.properties
+++ b/uz/webapprt/webapprt/overrides/dom.properties
@@ -149,3 +149,4 @@ SyncXMLHttpRequestWarning=Asosiy mavzudagi Sinxronlanadigan XMLHttpRequest eskir
 # LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
 DataContainerEventWarning=DataContainerEvent’dan foydalanish eskirgan. O‘rniga CustomEvent’dan foydalaning.
 # LOCALIZATION NOTE: Do not translate "Worker".
+EmptyWorkerSourceWarning=Bo‘sh manbadan Worker yaratishga urinilmoqda. Bunga balkim tasodifan bo‘lgan bo‘lishi mumkin.
