--- a/uz/webapprt/webapprt/overrides/appstrings.properties
+++ b/uz/webapprt/webapprt/overrides/appstrings.properties
@@ -29,6 +29,7 @@ externalProtocolUnknown=<Noma’lum>
 externalProtocolChkMsg=Ushbu turdagi barcha linklar uchun tanlovimni eslab qol.
 externalProtocolLaunchBtn=Ilovani ishga tushirish
 malwareBlocked=%S sayti hujum qiluvchi sayt sifatida ma’lumot berilgan va xavfsizlik moslamalaringizga asoslanib bloklangan.
+unwantedBlocked=%S saytida zararli dastur bor deb xabar berilgan, shuning uchun xavfsizlik moslamalaringizga asoslanib bloklandi.
 phishingBlocked=%S veb sayti foydalanuvchilarning shaxsiy va iqtisodiy ma’lumotlarini tarqatishga asoslangan qallob sayt sifatida xabar berilgan.
 cspBlocked=Ushbu ilova dastur ushbu usulda tashqi ulanishlarni rad qiladigan xavfsizlik nazoratiga ega manbaga kirishga urinmoqda.
 corruptedContentError=Ushbu ilova dastur yuklashni davom ettira olmaydi, chunki ma’lumotlarni ko‘chirishda xato aniqlandi.
