[az] update from Pootle (mobile)

--- a/az/mobile/android/chrome/aboutAccounts.properties
+++ b/az/mobile/android/chrome/aboutAccounts.properties
@@ -11,6 +11,6 @@ relinkDenied.openPrefs = NİZML
 
 relinkVerify.title = Sync-ə daxil olmaq istədiyinizdən əminsiniz?
 # LOCALIZATION NOTE (relinkVerify.message): Email address of a user previously signed in to Sync.
-relinkVerify.message = Daha əvvəl fərqli bir e-poçt ünvanıyla Sync-ə daxil olmusunuz. Daxil olmağınız bu səyyahın əlfəcin, parol və digər tənzimləmələrini %S ilə birləşdirəcək
+relinkVerify.message = Daha əvvəl fərqli e-poçt ünvanıyla Sync-ə daxil olmusunuz. Daxil olmağınız bu səyyahın əlfəcin, parol və digər tənzimləmələrini %S ilə birləşdirəcək
 relinkVerify.continue = Davam et
 relinkVerify.cancel = Ləğv et
