[az] update from Pootle (firefox-beta)

--- a/az/dom/chrome/accessibility/AccessFu.properties
+++ b/az/dom/chrome/accessibility/AccessFu.properties
@@ -75,10 +75,19 @@ definitionlist =       təsvir siyahısı
 term           =       termin
 definition     =       təsvir
 
+mathmltable              = riyaziyyat cədvəli
+mathmlcell               = xana
+mathmlenclosed           = əhatə olunmuş
+mathmlfraction           = kəsr
+mathmlfractionwithoutbar = çubuqsuz kəsr
+mathmlroot               = kök
+mathmlscripted           = skriptləşdirilmiş
+mathmlsquareroot         = kökaltı
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       mətn sahəsi
 
+base           =       oturacaq
 
 # Text input types
 textInputType_date   =       tarix
