[uz] update from Pootle (firefox-beta)

--- a/uz/dom/chrome/accessibility/mac/accessible.properties
+++ b/uz/dom/chrome/accessibility/mac/accessible.properties
@@ -41,5 +41,12 @@ alertDialog =      signal oynasi
 article     =      maqola
 document    =      hujjat
 log         =      jurnal
+marquee     =      siljuvchi qator
+math        =      matematika
 note        =      eslatma
+region      =      hudud
+status      =      ilova dastur holati
+timer       =      taymer
+tooltip     =      maslahatlar
 separator    =      ajratgich\u0020
+tabPanel     =      ichki oyna paneli
