--- a/uz/browser/chrome/browser/devtools/markers.properties
+++ b/uz/browser/chrome/browser/devtools/markers.properties
@@ -89,20 +89,45 @@ marker.gcreason.label.LAST_DITCH=Xotira yetmaydi
 marker.gcreason.label.TOO_MUCH_MALLOC=Juda ko‘p bayt ajratildi
 marker.gcreason.label.ALLOC_TRIGGER=Juda ko‘p ajratildi
 marker.gcreason.label.OUT_OF_NURSERY=Enaga – to‘la
+marker.gcreason.label.FULL_STORE_BUFFER=Enagalik obyekti juda faol
+marker.gcreason.label.SHARED_MEMORY_LIMIT=Ko‘p miqdorda ajratish amalga oshmadi
+marker.gcreason.label.PERIODIC_FULL_GC=Davriy to‘liq GC
+marker.gcreason.label.INCREMENTAL_TOO_SLOW=Ajratishlar darajasi juda tez
+marker.gcreason.label.COMPONENT_UTILS=Cu.forceGC
 marker.gcreason.label.MEM_PRESSURE=Past xotira
 marker.gcreason.label.CC_WAITING=Jamlanma halqasi tomonidan majburiy qilingan
 marker.gcreason.label.CC_FORCED=Jamlanma halqasi tomonidan majburiy qilingan
 marker.gcreason.label.LOAD_END=Sahifani yuklash tugadi
 marker.gcreason.label.PAGE_HIDE=Orqa fonga o‘tkazildi
+marker.gcreason.label.NSJSCONTEXT_DESTROY=JS matnini buzish
+marker.gcreason.label.SET_NEW_DOCUMENT=Yangi hujjat
+marker.gcreason.label.SET_DOC_SHELL=Yangi hujjat
+marker.gcreason.label.DOM_UTILS=API chaqirish
 marker.gcreason.label.DOM_IPC=IPC
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
+marker.gcreason.description.API=Majburiy chiqindi yig‘ish uchun API chaqirish bo‘lgan edi.
+marker.gcreason.description.EAGER_ALLOC_TRIGGER=JavaScript returned to the event loop and there were enough bytes allocated since the last GC that a new GC cycle was triggered.
 marker.gcreason.description.DESTROY_RUNTIME=Firefox JavaScript ishga tushish vaqtini buzgan va o‘chirishdan oldin so‘nggi chiqindi to‘lplami bo‘lgan.
 marker.gcreason.description.DESTROY_CONTEXT=Firefox JavaScript ishga tushish vaqtini buzgan va o‘chirishdan oldin so‘nggi chiqindi to‘plami bo‘lgan.
 marker.gcreason.description.LAST_DITCH=JavaScript ajratishga urinmoqda, ammo hech qanday xotira mavjud emas. ToAjratish uchun xotirani bo‘shatish kabi to‘liq yig‘ilga chiqindini to‘plang.
+marker.gcreason.description.TOO_MUCH_MALLOC=JavaScript juda ko‘p bayt ajratdi va chiqindini yig‘ishga majburladi.
+marker.gcreason.description.ALLOC_TRIGGER=JavaScript juda ko‘p marta ajratdi va chiqindini yig‘ishga majburladi.
+marker.gcreason.description.DEBUG_GC=Zeal tuzatish sozlamalari tufayli GC.
+marker.gcreason.description.COMPARTMENT_REVIVED=GC halqa boshida o‘lgan deb o‘ylangan global obyekt GC halqasi oxirida ommaviylashdi.
+marker.gcreason.description.RESET=Faol ko‘payadigan GC halqasi tezda tugatish uchun majburlandi.
+marker.gcreason.description.OUT_OF_NURSERY=JavaScript allocated enough new objects in the nursery that it became full and triggered a minor GC.
 marker.gcreason.description.MEM_PRESSURE=Juda past xotira mavjud edi.
 marker.gcreason.description.CC_WAITING=Halqa jamlagichi chiqindi yig‘ishni so‘ramoqda.
 marker.gcreason.description.PAGE_HIDE=Ichki oyna yoki oyna orqa fonga o‘tkazilgan.
 marker.gcreason.description.NSJSCONTEXT_DESTROY=Firefox JavaScript ishga tushish vaqtini buzgan va o‘chirishdan oldin so‘nggi chiqindi to‘lplami bo‘lgan.
+marker.gcreason.description.SET_NEW_DOCUMENT=Sahifa yangi hujjatni kuzatgan edi.
+marker.gcreason.description.SET_DOC_SHELL=Sahifa yangi hujjatni kuzatgan edi.
+marker.gcreason.description.DOM_UTILS=Majburiy chiqindi yig‘ish uchun API chaqirish bo‘lgan edi.
+marker.gcreason.description.DOM_IPC=Chiqindini yig‘ish so‘ralgan bosqichlararo xabar olindi.
+marker.gcreason.description.DOM_WORKER=Worker juda ko‘p vaqt ishlamadi.
+marker.gcreason.description.INTER_SLICE_GC=So‘nggi ko‘paygan GC parchasidan juda uzoq vaqt o‘tgan edi.
+marker.gcreason.description.FULL_GC_TIMER=JavaScript hodisalarni qayta ishlash halqasiga qaytdi va bu biz bajargan chiqindi yig‘ishdan uzoq vaqt keyin bo‘ldi.
+marker.gcreason.description.SHUTDOWN_CC=Firefox destroyed a JavaScript runtime or context, and this was the final garbage collection before shutting down.
 marker.gcreason.description.USER_INACTIVE=Foydalanuvchi uzoq vaqt nofaol bo‘lgan. Firefox u ogohlantirilmagan bo‘lganda GC bajarish imkoniyatini qo‘lga oladi.
