[az] update from Pootle (firefox)

--- a/az/toolkit/chrome/global/printdialog.properties
+++ b/az/toolkit/chrome/global/printdialog.properties
@@ -10,7 +10,7 @@ optionsTabLabelGTK=Nizamlar
 printFramesTitleGTK=Çərçivəni çap et
 
 # Mac titles:
-optionsTitleMac=Seçenekler:
+optionsTitleMac=Seçimlər:
 appearanceTitleMac=Görünüş:
 framesTitleMac=Çerçivələr:
 pageHeadersTitleMac=Səhifə başlıqları:
