--- a/az/toolkit/chrome/search/search.properties
+++ b/az/toolkit/chrome/search/search.properties
@@ -5,7 +5,7 @@
 addEngineConfirmTitle=Axtarış Motoru Əlavə Et
 addEngineConfirmation="%S" axtarış sətrində istifadə oluna biləcək axtarış mühərrikləri sırasına əlavə edilsin?\n\nQaynaq: %S
 addEngineAsCurrentText=Bunu m&övcud axtarış mühərriki et
-addEngineAddButtonLabel=Ekle
+addEngineAddButtonLabel=Əlavə et
 
 error_loading_engine_title=Yükləmə Səhvi
 # LOCALIZATION NOTE (error_loading_engine_msg2): %1$S = brandShortName, %2$S = location
