[az] update from Pootle (firefox-beta)

--- a/az/dom/chrome/accessibility/AccessFu.properties
+++ b/az/dom/chrome/accessibility/AccessFu.properties
@@ -88,6 +88,7 @@ mathmlsquareroot         = kökaltı
 textarea       =       mətn sahəsi
 
 base           =       oturacaq
+root-index     =       kök indeksi
 
 # Text input types
 textInputType_date   =       tarix
@@ -204,6 +205,10 @@ quicknav_Checkbox    = İşarətləmə qutuları
 
 # MathML menclose notations.
 # See developer.mozilla.org/docs/Web/MathML/Element/menclose#attr-notation
+notation-circle             = dairə
+notation-left               = sol
+notation-right              = sağ
+notation-top                = üst
 notation-bottom             = alt
 
 # Shortened role names for braille
@@ -289,6 +294,20 @@ stateUncheckedAbbr = ( )
 statePressedAbbr = (x)
 stateUnpressedAbbr = ( )
 
+mathmlenclosedAbbr           = bağlı
+mathmlcellAbbr               = xana
+mathmlfractionAbbr           = kəsr
+mathmlrootAbbr               = kök
+mathmlscriptedAbbr           = skriptləşdirilmiş
+mathmlsquarerootAbbr         = kökaltı
 
+baseAbbr           = oturacaq
+close-fenceAbbr    = qapat
+open-fenceAbbr     = aç
+overscriptAbbr     = üst
 root-indexAbbr     = indeks
 
+notation-circleAbbr             = dairə
+notation-leftAbbr               = sol
+notation-rightAbbr              = sağ
+notation-topAbbr                = üst
