--- a/az/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/az/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -6,6 +6,10 @@ rememberValue = Bu dəyəri yadda saxlamaq üçün şifrə idarəçisindən isti
 rememberPassword = Bu şifrəni yadda saxlamaq üçün şifrə idarəçisindən istifadə edin.
 savePasswordTitle = Təsdiqlə
 # LOCALIZATION NOTE (rememberLoginMsg, rememberLoginMsgNoUser): %S is brandShortName
+rememberLoginMsg = Daxil olmağınızın %S tərəfindən yadda saxlanmasını istəyirsiniz?
+rememberLoginMsgNoUser = Parolunuzun %S tərəfindən yadda saxlanmasını istəyirsiniz?
+rememberLoginButtonText = Yadda Saxla
+rememberLoginButtonAccessKey = S
 updateLoginButtonText = Yeniləmə
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname. 
