[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/devtools/markers.properties
+++ b/uz/browser/chrome/browser/devtools/markers.properties
@@ -88,7 +88,11 @@ marker.gcreason.label.DESTROY_CONTEXT=O‘chirish
 marker.gcreason.label.LAST_DITCH=Xotira yetmaydi
 marker.gcreason.label.TOO_MUCH_MALLOC=Juda ko‘p bayt ajratildi
 marker.gcreason.label.ALLOC_TRIGGER=Juda ko‘p ajratildi
+marker.gcreason.label.DEBUG_GC=GC’ni tuzatish
+marker.gcreason.label.COMPARTMENT_REVIVED=O‘lgan global jonlandi
+marker.gcreason.label.RESET=Ko‘payadigan halqani tugatish
 marker.gcreason.label.OUT_OF_NURSERY=Enaga – to‘la
+marker.gcreason.label.EVICT_NURSERY=Nursery Eviction
 marker.gcreason.label.FULL_STORE_BUFFER=Enagalik obyekti juda faol
 marker.gcreason.label.SHARED_MEMORY_LIMIT=Ko‘p miqdorda ajratish amalga oshmadi
 marker.gcreason.label.PERIODIC_FULL_GC=Davriy to‘liq GC
@@ -104,6 +108,13 @@ marker.gcreason.label.SET_NEW_DOCUMENT=Yangi hujjat
 marker.gcreason.label.SET_DOC_SHELL=Yangi hujjat
 marker.gcreason.label.DOM_UTILS=API chaqirish
 marker.gcreason.label.DOM_IPC=IPC
+marker.gcreason.label.DOM_WORKER=Mavsumiy Worker GC
+marker.gcreason.label.INTER_SLICE_GC=Davriy ko‘payadigan GC parchasi
+marker.gcreason.label.FULL_GC_TIMER=Davriy to‘liq GC
+marker.gcreason.label.SHUTDOWN_CC=O‘chirish
+marker.gcreason.label.FINISH_LARGE_EVALUATE=Katta Eval
+marker.gcreason.label.DOM_WINDOW_UTILS=Foydalanuvchi nofaol
+marker.gcreason.label.USER_INACTIVE=Foydalanuvchi nofaol
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
@@ -118,8 +129,16 @@ marker.gcreason.description.DEBUG_GC=Zeal tuzatish sozlamalari tufayli GC.
 marker.gcreason.description.COMPARTMENT_REVIVED=GC halqa boshida o‘lgan deb o‘ylangan global obyekt GC halqasi oxirida ommaviylashdi.
 marker.gcreason.description.RESET=Faol ko‘payadigan GC halqasi tezda tugatish uchun majburlandi.
 marker.gcreason.description.OUT_OF_NURSERY=JavaScript allocated enough new objects in the nursery that it became full and triggered a minor GC.
+marker.gcreason.description.EVICT_NURSERY=Work needed to be done on the tenured heap, requiring the nursery to be empty.
+marker.gcreason.description.FULL_STORE_BUFFER=There were too many properties on tenured objects whose value was an object in the nursery.
+marker.gcreason.description.SHARED_MEMORY_LIMIT=Katta miqdorda joylashtirish so‘ralgan edi, ammo xotira yetmagan edi.
+marker.gcreason.description.PERIODIC_FULL_GC=JavaScript hodisalarni qayta ishlash halqasiga qaytdi va bu Firefox bajargan chiqindi yig‘ishdan uzoq vaqt keyin bo‘ldi.
+marker.gcreason.description.INCREMENTAL_TOO_SLOW=To‘liq, ko‘paymaydigan chiqindi to‘plash chaqirilgan, chunki mavjud ko‘paymaydigan chiqindi to‘plash halqasi saqlaganidan ko‘ra ajratish darajasi tezroq edi.
+marker.gcreason.description.COMPONENT_UTILS=Components.utils.forceGC() majburiy chiqindi yig‘ish uchun chaqirilgan edi.
 marker.gcreason.description.MEM_PRESSURE=Juda past xotira mavjud edi.
 marker.gcreason.description.CC_WAITING=Halqa jamlagichi chiqindi yig‘ishni so‘ramoqda.
+marker.gcreason.description.CC_FORCED=Halqa jamlagichi chiqindi yig‘ishni so‘ramoqda.
+marker.gcreason.description.LOAD_END=Hujat yuklashni tugatdi.
 marker.gcreason.description.PAGE_HIDE=Ichki oyna yoki oyna orqa fonga o‘tkazilgan.
 marker.gcreason.description.NSJSCONTEXT_DESTROY=Firefox JavaScript ishga tushish vaqtini buzgan va o‘chirishdan oldin so‘nggi chiqindi to‘lplami bo‘lgan.
 marker.gcreason.description.SET_NEW_DOCUMENT=Sahifa yangi hujjatni kuzatgan edi.
@@ -130,4 +149,6 @@ marker.gcreason.description.DOM_WORKER=Worker juda ko‘p vaqt ishlamadi.
 marker.gcreason.description.INTER_SLICE_GC=So‘nggi ko‘paygan GC parchasidan juda uzoq vaqt o‘tgan edi.
 marker.gcreason.description.FULL_GC_TIMER=JavaScript hodisalarni qayta ishlash halqasiga qaytdi va bu biz bajargan chiqindi yig‘ishdan uzoq vaqt keyin bo‘ldi.
 marker.gcreason.description.SHUTDOWN_CC=Firefox destroyed a JavaScript runtime or context, and this was the final garbage collection before shutting down.
+marker.gcreason.description.FINISH_LARGE_EVALUATE=Firefox katta skriptni hisoblashni tugatdi va GC’ni amalga oshirdi, chunki skript endi hech qachon ishga tushirilmaydi.
+marker.gcreason.description.DOM_WINDOW_UTILS=Foydalanuvchi uzoq vaqt nofaol bo‘lgan. U ogohlantirilmagan bo‘lganda GC bajarish imkoniyatini qo‘lga oling.
 marker.gcreason.description.USER_INACTIVE=Foydalanuvchi uzoq vaqt nofaol bo‘lgan. Firefox u ogohlantirilmagan bo‘lganda GC bajarish imkoniyatini qo‘lga oladi.
