--- a/uz/dom/chrome/accessibility/AccessFu.properties
+++ b/uz/dom/chrome/accessibility/AccessFu.properties
@@ -32,6 +32,7 @@ outlineitem    =       chiziqdan tashqaridagi element
 pagetab        =       ichki oyna
 propertypage   =       sahifa xossasi
 graphic        =       grafika
+switch         =       almashtirish
 pushbutton     =       tugma
 checkbutton    =       tekchirish tugmasi
 radiobutton    =       radio tugmasi
@@ -74,10 +75,20 @@ definitionlist =       aniqlanish ro‘yxati
 term           =       shart
 definition     =       aniqlash
 
+mathmltable              = matematika jadvali
+mathmlcell               = katak
+mathmlenclosed           = yopildi
+mathmlfraction           = funksiya
+mathmlfractionwithoutbar = qatorsiz fraksiya
+mathmlroot               = asos
+mathmlscripted           = skriptlangan
+mathmlsquareroot         = kvadrat asos
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       matn maydoni
 
+base           =       asosiy
+close-fence    =       hovlini yopish
 
 # Text input types
 textInputType_date   =       sana
