--- a/uz/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/uz/toolkit/chrome/global/devtools/gclicommands.properties
@@ -84,6 +84,7 @@ screenshotGroupOptions=Moslamalar
 
 # LOCALIZATION NOTE (screenshotGroupOptions) A label for the advanced options of
 # the screenshot command.
+screenshotAdvancedOptions=Qo‘shimcha moslamalar
 
 # LOCALIZATION NOTE (screenshotDelayDesc) A very short string to describe
 # the 'delay' parameter to the 'screenshot' command, which is displayed in
@@ -138,17 +139,21 @@ screenshotTooltip=Butun ekranni suratga olish
 # LOCALIZATION NOTE (screenshotImgurDesc) A very short string to describe
 # the 'imgur' parameter to the 'screenshot' command, which is displayed in
 # a dialog when the user is using this command.
+screenshotImgurDesc=imgur.com saytiga yuklab qo‘yish
 
 # LOCALIZATION NOTE (screenshotImgurManual) A fuller description of the
 # 'imgur' parameter to the 'screenshot' command, displayed when the user
 # asks for help on what it does.
+screenshotImgurManual=Diskka saqalash o‘rniga, xohlasangiz, imgur.com saytiga yuklashdan foydalaning
 
 # LOCALIZATION NOTE (screenshotImgurError) Text displayed to user upon
 # encountering error while uploading the screenshot to imgur.com.
+screenshotImgurError=Imgur API olinmadi
 
 # LOCALIZATION NOTE (screenshotImgurUploading) Text displayed to user when the
 # screenshot is successfully sent to Imgur but the program is waiting on a response.
 # The argument (%1$S) is a new image URL at Imgur.
+screenshotImgurUploaded=%1$S saytiga yuklandi
 
 # LOCALIZATION NOTE (highlightDesc) A very short description of the
 # 'highlight' command. See highlightManual for a fuller description of what
@@ -261,7 +266,7 @@ unhighlightManual='highlight' buyrug‘i bilan oldin ajratib ko‘rsatilgan ulam
 # 'restart' command. This string is designed to be shown in a menu alongside the
 # command name, which is why it should be as short as possible.
 # The argument (%1$S) is the browser name.
-restartBrowserDesc=%1$Sni qayta ishga tushirish
+restartBrowserDesc=%1$S brauzerini qayta ishga tushirish
 
 # LOCALIZATION NOTE (restartBrowserNocacheDesc) A very short string to
 # describe the 'nocache' parameter to the 'restart' command, which is
@@ -279,10 +284,12 @@ restartBrowserRestarting=%1$S qayta ishga tushirilmoqda…
 
 # LOCALIZATION NOTE (restartBrowserGroupOptions) A label for the optional options of
 # the restart command.
+restartBrowserGroupOptions=Moslamalar
 
 # LOCALIZATION NOTE (restartBrowserSafemodeDesc) A very short string to
 # describe the 'safemode' parameter to the 'restart' command, which is
 # displayed in a dialog when the user is using this command.
+restartBrowserSafemodeDesc=Qayta ishga tushirilgandan so‘ng Xavfsiz rejimni yoqadi
 
 # LOCALIZATION NOTE (inspectDesc) A very short description of the 'inspect'
 # command. See inspectManual for a fuller description of what it does. This
@@ -703,7 +710,7 @@ resizeModeDesc=Javob beradigan dezayn rejimini boshqarish
 # LOCALIZATION NOTE (resizeModeManual) A fuller description of the 'resize'
 # command, displayed when the user asks for help on what it does.
 # The argument (%1$S) is the browser name.
-resizeModeManual2=Javobgar vebsaytlar o‘zlarining muhitlariga javob berishadi, shuning uchun ular mobil, kinoteatr  ekranida va o‘zaro hammasida yaxshi ko‘rinadi. Javob beruvchi dizayn usuli turli xil sahifa hajmlarini %1$Sda butun brauzer hajmini o‘zgartirmasdan oson sinashga ruxsat beradi.
+resizeModeManual2=Javobgar vebsaytlar o‘zlarining muhitlariga javob berishadi, shuning uchun ular mobil, kinoteatr  ekranida va o‘zaro hammasida yaxshi ko‘rinadi. Javob beruvchi dizayn usuli turli xil sahifa hajmlarini %1$S brauzerida butun brauzer hajmini o‘zgartirmasdan oson sinashga ruxsat beradi.
 
 # LOCALIZATION NOTE (cmdDesc) A very short description of the 'cmd'
 # command. This string is designed to be shown in a menu alongside the command
@@ -965,9 +972,11 @@ toolsSrcdirDesc=Mozilla-central checkout’dan yuklangan asboblar
 
 # LOCALIZATION NOTE (toolsSrcdirNotFound2) Shown when the 'tools srcdir' command was handed
 # an invalid srcdir.
+toolsSrcdirNotFound2=%1$S mavjud emas yoki mozilla-central checkout emas.
 
 # LOCALIZATION NOTE (toolsSrcdirReloaded2) Displayed when tools have been reloaded by the
 # 'tools srcdir' command.
+toolsSrcdirReloaded2=%1$S buyrug‘idan yuklangan asboblar.
 
 # LOCALIZATION NOTE (toolsSrcdirManual2) A full description of the 'tools srcdir'
 # command. The argument (%1$S) is the browser name.
@@ -1519,12 +1528,15 @@ listenNoInitOutput=DebuggerServer ishga tushirilmadi
 
 # LOCALIZATION NOTE (unlistenDesc) A very short string used to describe the
 # function of the 'unlisten' command.
+unlistenDesc=Barcha masofadagi tuzatish portlarini yopish
 
 # LOCALIZATION NOTE (unlistenManual) A longer description of the 'unlisten'
 # command.
+unlistenManual=Masofadan tuzatish uchun barcha ochiq portlarni yopadi.
 
 # LOCALIZATION NOTE (unlistenOutput) Text of a message output during the
 # execution of the 'unlisten' command.
+unlistenOutput=Barcha TCP portlar yopiladi
 
 # LOCALIZATION NOTE (mediaDesc, mediaEmulateDesc, mediaEmulateManual,
 # mediaEmulateType, mediaResetDesc, mediaResetManual) These strings describe
@@ -1562,16 +1574,30 @@ folderInvalidPath=To‘g‘ri yo‘lni kiriting
 folderOpenDirResult=%1$S ochildi
 
 # LOCALIZATION NOTE (security)
+securityDesc=Qo‘llab-quvvatlanadigan xavfsizlik xususiyatlarini ko‘rsatish
+securityManual=Joriy domen uchun xavfsizlik xususiyatlari haqida tavsiyalar olish va ro‘yxatini keltirish buyruqlari.
+securityListDesc=Xavfsizlik xususiyatlarini ko‘rsatish
+securityListManual=Joriy sahifaga tegishli barcha xavfsizlik xususiyatlari ro‘yxatini ko‘rsatish.
 # CSP specific
+securityCSPDesc=CSP maxsus xavfsizlik xususiyatlarini ko‘rsatish
+securityCSPManual=Joriy sahifa uchun berilgan CSP haqida mulohazalarni ko‘rsatish.
+securityCSPRemWildCard=Wildcard(*)ni olib tashlay olasizmi?
+securityCSPPotentialXSS=Potensial darajadagi XSS zaiflik!
 # LOCALIZATION NOTE: do not translate 'Content-Security-Policy'
+securityCSPNoCSPOnPage=Content-Security-Policy topilmadi
+securityCSPHeaderOnPage=Content-Security-Policy
+securityCSPROHeaderOnPage=Content-Security-Policy-Report-Only
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
 # 'rulers' command. See rulersManual for a fuller description of what
 # it does. This string is designed to be shown in a menu alongside the
 # command name, which is why it should be as short as possible.
+rulersDesc=Sahifa uchun chizg‘ichni yoqish/o‘chirish
 
 # LOCALIZATION NOTE (rulersManual) A fuller description of the 'rulers'
 # command, displayed when the user asks for help on what it does.
+rulersManual=Joriy sahifa uchun gorizantal va vertikal chizg‘ichni yoqish/o‘chirish
 
 # LOCALIZATION NOTE (rulersTooltip) A string displayed as the
 # tooltip of button in devtools toolbox which toggles the rulers.
+rulersTooltip=Sahifa uchun chizg‘ichni yoqish/o‘chirish
