--- a/uz/toolkit/chrome/global/devtools/gcli.properties
+++ b/uz/toolkit/chrome/global/devtools/gcli.properties
@@ -51,6 +51,7 @@ cliOptions=Mavjud moslamalar
 
 # LOCALIZATION NOTE: The error message when the user types a command that
 # isn't registered
+cliUnknownCommand2=Noto‘g‘ri buyruq: '%1$S'.
 
 # LOCALIZATION NOTE: A parameter should have a value, but doesn't
 cliIncompleteParam='%1$S' uchun so‘ralgan qiymat.
