--- a/uz/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/uz/toolkit/chrome/global/devtools/styleinspector.properties
@@ -70,6 +70,7 @@ rule.empty=Birorta ham element tanlanmadi.
 
 # LOCALIZATION NOTE (ruleView.selectorHighlighter.tooltip): Text displayed in a
 # tooltip when the mouse is over a selector highlighter icon in the rule view.
+rule.selectorHighlighter.tooltip=Ushbu tanlagich topgan barcha elementlarni ajratib ko‘rsatish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyColor): Text displayed in the rule
 # and computed view context menu when a color value was clicked.
@@ -77,6 +78,7 @@ styleinspector.contextmenu.copyColor=Rangdan nusxa olish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyColor.accessKey): Access key for
 # the rule and computed view context menu "Copy Color" entry.
+styleinspector.contextmenu.copyColor.accessKey=L
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyUrl): In rule and computed view :
 # text displayed in the context menu for an image URL.
@@ -85,6 +87,7 @@ styleinspector.contextmenu.copyUrl=URL'dan nusxa olish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyUrl.accessKey): Access key for
 # the rule and computed view context menu "Copy URL" entry.
+styleinspector.contextmenu.copyUrl.accessKey=U
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyImageDataUrl): In rule and computed view :
 # text displayed in the context menu for an image URL.
@@ -93,56 +96,74 @@ styleinspector.contextmenu.copyImageDataUrl=Rasm ma’lumot-URL’dan nusxa olis
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyDataUri.accessKey): Access key for
 # the rule and computed view context menu "Copy Image Data-URL" entry.
+styleinspector.contextmenu.copyImageDataUrl.accessKey=I
 
 # LOCALIZATION NOTE (styleinspector.copyDataUriError): Text set in the clipboard
 # if an error occurs when using the copyImageDataUrl context menu action
 # (invalid image link, timeout, etc...)
+styleinspector.copyImageDataUrlError=Rasm URL ma’lumotlaridan nusxa olinmadi
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.toggleOrigSources): Text displayed in the rule view
 # context menu.
+styleinspector.contextmenu.toggleOrigSources=Asl manbalarni ko‘rsatish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.toggleOrigSources.accessKey): Access key for
 # the rule view context menu "Show original sources" entry.
+styleinspector.contextmenu.toggleOrigSources.accessKey=O
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.showMdnDocs): Text displayed in the rule view
 # context menu to display docs from MDN for an item.
+styleinspector.contextmenu.showMdnDocs=MDN hujjatlarini ko‘rsatish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.showMdnDocs.accessKey): Access key for
 # the rule view context menu "Show MDN docs" entry.
+styleinspector.contextmenu.showMdnDocs.accessKey=D
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.addNewRule): Text displayed in the
 # rule view context menu for adding a new rule to the element.
 # This should match addRuleButton.tooltip in styleinspector.dtd
+styleinspector.contextmenu.addNewRule=Yangi qoida qo‘shish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.addRule.accessKey): Access key for
 # the rule view context menu "Add rule" entry.
+styleinspector.contextmenu.addNewRule.accessKey=R
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.selectAll): Text displayed in the
 # computed view context menu.
+styleinspector.contextmenu.selectAll=Barchasini belgilash
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.selectAll.accessKey): Access key for
 # the computed view context menu "Select all" entry.
+styleinspector.contextmenu.selectAll.accessKey=A
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copy): Text displayed in the
 # computed view context menu.
+styleinspector.contextmenu.copy=Nusxa olish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copy.accessKey): Access key for
 # the computed view context menu "Copy" entry.
+styleinspector.contextmenu.copy.accessKey=C
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyLocation): Text displayed in the
 # rule view context menu for copying the source location.
+styleinspector.contextmenu.copyLocation=Manzildan nusxa olish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyPropertyDeclaration): Text
 # displayed in the rule view context menu for copying the property declaration.
+styleinspector.contextmenu.copyPropertyDeclaration=Egalik deklaratsiyasidan nusxa olish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyPropertyName): Text displayed in
 # the rule view context menu for copying the property name.
+styleinspector.contextmenu.copyPropertyName=Egalik nomidan nuxsa olish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyPropertyValue): Text displayed in
 # the rule view context menu for copying the property value.
+styleinspector.contextmenu.copyPropertyValue=Egalik qiymatidan nusxa olish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copyRule): Text displayed in the
 # rule view context menu for copying the rule.
+styleinspector.contextmenu.copyRule=Qoidadan nusxa olish
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copySelector): Text displayed in the
 # rule view context menu for copying the selector.
+styleinspector.contextmenu.copySelector=Tanlagichdan nusxa olish
