--- a/uz/toolkit/chrome/global/viewSource.properties
+++ b/uz/toolkit/chrome/global/viewSource.properties
@@ -12,4 +12,7 @@ statusBarLineCol  = Qator %1$S, Ustun %2$S
 viewSelectionSourceTitle = DOM tanlash manbasi
 viewMathMLSourceTitle    = DOM MathML manbasi
 
+context_goToLine_label        = Qatorga o‘tish
+context_goToLine_accesskey    = L
 context_wrapLongLines_label   = Uzun satrlarni moslashtirish
+context_highlightSyntax_label = Sintaksisni ajratib ko‘rsatish
