[uz] update from Pootle (firefox)

--- a/uz/browser/chrome/browser/browser.properties
+++ b/uz/browser/chrome/browser/browser.properties
@@ -729,4 +729,6 @@ readingList.promo.firstUse.readerView.body = Chalg‘ituvchilarni olib tashlang,
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
 e10s.offerPopup.highlight2 = Nosozliklar kamaydi
+e10s.accessibilityNotice.disableAndRestart.label = O‘chirib qo‘yish va qayta ishga tushirish
+e10s.accessibilityNotice.disableAndRestart.accesskey = q
 
