[az] update from Pootle (firefox-beta)

--- a/az/toolkit/chrome/global/aboutWebrtc.properties
+++ b/az/toolkit/chrome/global/aboutWebrtc.properties
@@ -18,6 +18,7 @@ save_page_dialog_title = about:webrtc-ni fərqli qeyd et
 
 # LOCALIZATION NOTE (debug_mode_off_state_msg):
 # %1$S will be replaced by the full path file name of the debug log.
+debug_mode_off_state_msg = izləmə qeydiyyatı %1$S ünvanındadır.
 
 # LOCALIZATION NOTE (debug_mode_on_state_msg):
 # %1$S will be replaced by the full path file name of the debug log.
