--- a/az/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/az/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -10,7 +10,10 @@ rememberLoginMsg = Daxil olmağınızın %S tərəfindən yadda saxlanmasını i
 rememberLoginMsgNoUser = Parolunuzun %S tərəfindən yadda saxlanmasını istəyirsiniz?
 rememberLoginButtonText = Yadda Saxla
 rememberLoginButtonAccessKey = S
+updateLoginMsg = Bu daxil olmanı yeniləmək istərdiniz?
+updateLoginMsgNoUser = Bu parolu yeniləmək istərdiniz?
 updateLoginButtonText = Yeniləmə
+updateLoginButtonAccessKey = Y
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname. 
 # Note that long usernames may be truncated.
@@ -20,6 +23,7 @@ rememberPasswordMsg = %2$S saytındakı "%1$S" üçün olan şifrəni yadda saxl
 rememberPasswordMsgNoUsername = %S -də şifrənizi saxlamaq istəyirsiniz mi?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
+noUsernamePlaceholder=İstifadəçi adı yoxdur
 # LOCALIZATION NOTE (showPasswordPlaceholder):
 # This is displayed in the password field to indicate that the password will be
 # shown if focused.
@@ -32,12 +36,14 @@ notifyBarNeverRememberButtonText = Bu Sayt Üçün Olan Şifrələri Heç Vaxt Y
 notifyBarNeverRememberButtonAccessKey = e
 rememberButtonText = &Yadda Saxla
 notifyBarRememberPasswordButtonText = Şifrəni Yadda Saxla
+notifyBarRememberPasswordButtonAccessKey = P
 passwordChangeTitle = Şifrə dəyişikliyini təsdiqləyin
 # LOCALIZATION NOTE (updatePasswordMsg):
 # String is the username for the login.
 updatePasswordMsg = "%S" üçün yadda saxlanmış şifrəni yeniləmək istəyirsinizmi?
 updatePasswordMsgNoUser = Yadda Saxlanmış şifrəni yeniləmək istəyirsinizmi?
 notifyBarUpdateButtonText = Şifrəni Yenilə
+notifyBarUpdateButtonAccessKey = Y
 notifyBarDontChangeButtonText = Dəyişdirmə
 notifyBarDontChangeButtonAccessKey = D
 userSelectText = Zəhmət olmasa hansı istifadəçi üçün şifrəni dəyişdiyinizi təsdiqləyin
@@ -48,6 +54,8 @@ showPasswordsAccessKey=P
 noMasterPasswordPrompt=Şifrələrinizi göstərmək istədiyinizə əminsinizmi?
 removeAllPasswordsPrompt=Bütün şifrələri silmək istədiyinizə əminsinizmi?
 removeAllPasswordsTitle=Bütün şifrələri sil
+removeLoginPrompt=Bu daxil olmanı silmək istədiyinizə əminsiniz?
+removeLoginTitle=Daxil olmanı sil
 loginsSpielAll=Bu saytlar üçün olan şifrələr kompüterinizdə saxlanılır:
 loginsSpielFiltered=Aşağıdakı şifrələr axtarışınıza uyğun gəlir:
 # LOCALIZATION NOTE (loginHostAge):
@@ -56,3 +64,6 @@ loginsSpielFiltered=Aşağıdakı şifrələr axtarışınıza uyğun gəlir:
 loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
+noUsername=İstifadəçi adı yoxdur
+duplicateLoginTitle=Daxil olma artıq mövcuddur
+duplicateLogin=Təkrar daxil olma artıq mövcuddur.
