[uz] update from Pootle (firefox-beta)

--- a/uz/dom/chrome/dom/dom.properties
+++ b/uz/dom/chrome/dom/dom.properties
@@ -156,7 +156,9 @@ XMLDocumentLoadPrincipalMismatch=Hujjatlarda boshqa Windows’dan kelgan documen
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Haligacha tugallanmagan IndexedDB o‘kazmasi sahifa boshqaruv nazorati tufayli to‘xtatib qo‘yilgan.
 # LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeOverBudgetIgnoredWarning=O'zgartiriladigan xotiradan foydalanish juda yuqori. Yuza hududi %1$S pikselni qoplagan, hujjat hududi yuzasi byudjeti  %2$S (%3$S piksel) tomonidan ko‘paytirilgan. Hujjatdagi o‘zgartiriladigan barcha hodisalar byudjet tugaganda rad qilinadi.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
+HittingMaxWorkersPerDomain=ServiceWorker tezda ishga tushirilmadi, chunki aynan bir xil manbadagi boshqa hujjatlardan maksimal miqdordagi workers foydalanmoqda. ServiceWorker hozir navbatga qo‘shildi va boshqa workers tugagandan so‘ng boshlanadi.
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
 # LOCALIZATION NOTE: Do not translate "Worker".
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
