--- a/uz/toolkit/chrome/global/aboutTelemetry.properties
+++ b/uz/toolkit/chrome/global/aboutTelemetry.properties
@@ -9,13 +9,19 @@ pageSubtitle = Ushbu sahifa telemetriya tomonidan yigʻilgan ishlash tezligi, qu
 
 generalDataTitle = Umumiy ma’lumot
 
+generalDataHeadingName = Nomi
 
 generalDataHeadingValue = Qiymat
 
+environmentDataHeadingName = Nomi
 
+environmentDataHeadingValue = Qiymati
 
+telemetryLogTitle = Telemetriya jurnali
 
+telemetryLogHeadingId = Id
 
+telemetryLogHeadingTimestamp = Vaqt belgilari
 
 telemetryLogHeadingData = Ma’lumot
 
