--- a/uz/dom/chrome/accessibility/AccessFu.properties
+++ b/uz/dom/chrome/accessibility/AccessFu.properties
@@ -89,6 +89,16 @@ textarea       =       matn maydoni
 
 base           =       asosiy
 close-fence    =       hovlini yopish
+denominator    =       denominator
+numerator      =       raqamlagich
+open-fence     =       hovlini ochish
+overscript     =       overscript
+presubscript   =       presubscript
+presuperscript =       presuperscript
+root-index     =       asos indeksi
+subscript      =       quyi skript
+superscript    =       superscript
+underscript    =       skript osti
 
 # Text input types
 textInputType_date   =       sana
@@ -140,6 +150,8 @@ jumpAction     =      sakradi
 pressAction    =      bosildi
 checkAction    =      tekshirildi
 uncheckAction  =      tekshirilmadi
+onAction       =      yoqish
+offAction      =      o‘chirish
 selectAction   =      tanlandi
 unselectAction =      tanlash bekor qilindi
 openAction     =      ochildi
@@ -164,7 +176,9 @@ tabReload      =      qayta yuklanmoqda
 
 # Object states
 stateChecked     =    tekshirildi
+stateOn          =    yoqish
 stateNotChecked  =    tekshirilmadi
+stateOff         =    o‘chirish
 statePressed     =    bosildi
 # No string for a not pressed toggle button
 stateExpanded    =    kengaytirildi
@@ -201,6 +215,23 @@ quicknav_Checkbox    = Bayroqchalar
 
 # MathML menclose notations.
 # See developer.mozilla.org/docs/Web/MathML/Element/menclose#attr-notation
+notation-longdiv            = uzoq bo‘linish
+notation-actuarial          = aktuar
+notation-phasorangle        = fazor burchagi
+notation-radical            = radikal
+notation-box                = quti
+notation-roundedbox         = o‘ralgan quti
+notation-circle             = halqa
+notation-left               = chap
+notation-right              = o‘ng
+notation-top                = yuqori
+notation-bottom             = quyi
+notation-updiagonalstrike   = yuqoriga qaragan diagonal o‘q
+notation-downdiagonalstrike = pastga qaragan diagonal o‘q
+notation-verticalstrike     = vertikal o‘q
+notation-horizontalstrike   = gorizontal o‘q
+notation-updiagonalarrow    = yuqoriga qaragan diagonal strelka
+notation-madruwb            = madruwb
 
 # Shortened role names for braille
 menubarAbbr        =       menyu paneli
@@ -214,6 +245,7 @@ dialogAbbr         =       dialog
 separatorAbbr      =       ajratgich
 toolbarAbbr        =       asboblar paneli
 statusbarAbbr      =       holat paneli
+tableAbbr          =       jdvl
 columnheaderAbbr   =       ustun sarlavhasi
 rowheaderAbbr      =       qator sarlavhasi
 columnAbbr         =       ustun
@@ -285,6 +317,42 @@ stateUncheckedAbbr = ( )
 statePressedAbbr = (x)
 stateUnpressedAbbr = ( )
 
+mathmlenclosedAbbr           = yopildi
+mathmltableAbbr              = jdvl
+mathmlcellAbbr               = katak
+mathmlfractionAbbr           = frak
+mathmlfractionwithoutbarAbbr = qatorsiz frak.
+mathmlrootAbbr               = asos
+mathmlscriptedAbbr           = skriptlangan
+mathmlsquarerootAbbr         = kvdrt
 
+baseAbbr           = asosiy
+close-fenceAbbr    = yopish
+denominatorAbbr    = den
+numeratorAbbr      = raq
+open-fenceAbbr     = ochish
+overscriptAbbr     = yuqori
+presubscriptAbbr   = presub
+presuperscriptAbbr = presup
 root-indexAbbr     = indeks
+subscriptAbbr      = quyi
+superscriptAbbr    = sup
+underscriptAbbr    = ostida
 
+notation-longdivAbbr            = longdiv
+notation-actuarialAbbr          = faol
+notation-phasorangleAbbr        = phasang
+notation-radicalAbbr            = rad
+notation-boxAbbr                = quti
+notation-roundedboxAbbr         = rndbox
+notation-circleAbbr             = halqa
+notation-leftAbbr               = chap
+notation-rightAbbr              = o‘ng
+notation-topAbbr                = yuqori
+notation-bottomAbbr             = quyi
+notation-updiagonalstrikeAbbr   = updiagstrike
+notation-downdiagonalstrikeAbbr = dwndiagstrike
+notation-verticalstrikeAbbr     = vstrike
+notation-horizontalstrikeAbbr   = hstrike
+notation-updiagonalarrowAbbr    = updiagarrow
+notation-madruwbAbbr            = madruwb
