--- a/uz/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/uz/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -6,7 +6,14 @@ rememberValue = Ushbu qiymatni eslab qolish uchun "Parol boshqaruvchisi"dan foyd
 rememberPassword = Ushbu parolni eslab qolish uchun "Parol boshqaruvchisi"dan foydalaning.
 savePasswordTitle = Tasdiqlash
 # LOCALIZATION NOTE (rememberLoginMsg, rememberLoginMsgNoUser): %S is brandShortName
+rememberLoginMsg = %S parolni eslab qolishini xohlaysizmi?
+rememberLoginMsgNoUser = %S parolni eslab qolishini xohlaysizmi?
+rememberLoginButtonText = Eslab qolish
+rememberLoginButtonAccessKey = R
+updateLoginMsg = Ushbu loginnni saqlashni xohlaysizmi?
+updateLoginMsgNoUser = Saqlangan parolni yangilashni xohlaysizmi?
 updateLoginButtonText = Yangilash
+updateLoginButtonAccessKey = U
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname. 
 # Note that long usernames may be truncated.
@@ -16,9 +23,11 @@ rememberPasswordMsg = %2$S`dagi "%1$S" uchun parolni eslab qolinishini xohlaysiz
 rememberPasswordMsgNoUsername = %S`dagi parolni eslab qolinishini xohlaysizmi?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
+noUsernamePlaceholder=Foydalanuvchi nomi yo‘q
 # LOCALIZATION NOTE (showPasswordPlaceholder):
 # This is displayed in the password field to indicate that the password will be
 # shown if focused.
+showPasswordPlaceholder=KO‘RSATISH
 notNowButtonText = &Hozir emas
 notifyBarNotNowButtonText = Hozir emas
 notifyBarNotNowButtonAccessKey = N
@@ -27,12 +36,14 @@ notifyBarNeverRememberButtonText = Ushbu sayt uchun parol hech qachon eslab qoli
 notifyBarNeverRememberButtonAccessKey = e
 rememberButtonText = &Eslab qolish
 notifyBarRememberPasswordButtonText = Parolni eslab qolish
+notifyBarRememberPasswordButtonAccessKey = R
 passwordChangeTitle = Parolni oʻzgartirishni tasdiqlash
 # LOCALIZATION NOTE (updatePasswordMsg):
 # String is the username for the login.
 updatePasswordMsg = "%S" uchun parolni saqlashni xohlaysizmi?
 updatePasswordMsgNoUser = Saqlangan parolni yangilashni xohlaysizmi?
 notifyBarUpdateButtonText = Parolni yangilash
+notifyBarUpdateButtonAccessKey = U
 notifyBarDontChangeButtonText = Oʻzgartirilmasin
 notifyBarDontChangeButtonAccessKey = D
 userSelectText = Foydalanuvchilar ushbu uchun parolni oʻzgartirishini tasdiqlash:
@@ -43,6 +54,8 @@ showPasswordsAccessKey=P
 noMasterPasswordPrompt=Parollaringizni koʻrsatilishini xohlaysizmi?
 removeAllPasswordsPrompt=Barcha parollarni oʻchirishni xohlaysizmi?
 removeAllPasswordsTitle=Barcha parollarni oʻchirish
+removeLoginPrompt=Bu loginni o‘chirishni xohlaysizmi?
+removeLoginTitle=Loginni olib tashlash
 loginsSpielAll=Quyidagi saytlar uchun parollar kompyuteringizda joylashtirilgan:
 loginsSpielFiltered=Qidiruvingiz boʻyicha quyidagi parollar topildi:
 # LOCALIZATION NOTE (loginHostAge):
