[az] update from Pootle (firefox-beta)

--- a/az/toolkit/chrome/global/aboutWebrtc.properties
+++ b/az/toolkit/chrome/global/aboutWebrtc.properties
@@ -22,14 +22,20 @@ debug_mode_off_state_msg = izləmə qeydiyyatı %1$S ünvanındadır.
 
 # LOCALIZATION NOTE (debug_mode_on_state_msg):
 # %1$S will be replaced by the full path file name of the debug log.
+debug_mode_on_state_msg = sazlama rejimi aktivdir, izləmə qeydiyyatı: %1$S
 
 # LOCALIZATION NOTE (aec_logging_msg_label, aec_logging_off_state_label,
 # aec_logging_on_state_label, aec_logging_on_state_msg):
 # AEC is an abbreviation for Acoustic Echo Cancellation.
+aec_logging_msg_label = AEC Qeydiyyatı
+aec_logging_off_state_label = AEC Qeydiyyatını başlat
+aec_logging_on_state_label = AEC Qeydiyyatını dayandır
+aec_logging_on_state_msg = AEC qeydiyyatı aktivdir (zəng edənlə bir neçə dəqiqə danışdıqdan sonra qeydiyyatı dayandırın)
 
 # LOCALIZATION NOTE (aec_logging_off_state_msg):
 # %1$S will be replaced by the full path to the directory containing the captured log files.
 # AEC is an abbreviation for Acoustic Echo Cancellation.
+aec_logging_off_state_msg = çəkilmiş qeyd faylları burada saxlanılır: %1$S
 
 # LOCALIZATION NOTE (peer_connection_id_label): "PeerConnection" is a proper noun
 # associated with the WebRTC module. "ID" is an abbreviation for Identifier. This string
