[uz] update from Pootle (firefox-beta)

--- a/uz/security/manager/chrome/pipnss/pipnss.properties
+++ b/uz/security/manager/chrome/pipnss/pipnss.properties
@@ -110,6 +110,10 @@ CertDumpAuthInfoAccess=Markaz toʻgʻrisidagi axborotga ruxsat
 CertDumpAnsiX9DsaSignature=ANSI X9.57 DSA imzosi
 CertDumpAnsiX9DsaSignatureWithSha1=ANSI X9.57 DSA с SHA1 Digest imzosi
 CertDumpAnsiX962ECDsaSignatureWithSha1=ANSI X9.62 ECDSA с SHA1 imzosi
+CertDumpAnsiX962ECDsaSignatureWithSha224=ANSI X9.62 ECDSA imzosi SHA224 bilan
+CertDumpAnsiX962ECDsaSignatureWithSha256=ANSI X9.62 ECDSA imzosi SHA256 bilan
+CertDumpAnsiX962ECDsaSignatureWithSha384=ANSI X9.62 ECDSA imzosi SHA384 bilan
+CertDumpAnsiX962ECDsaSignatureWithSha512=ANSI X9.62 ECDSA imzosi SHA512 bilan
 CertDumpKUSign=Yozilmoqda
 CertDumpKUNonRep=Rad qilmaslik
 CertDumpKUEnc=Kalit shifrlanishi
@@ -268,6 +272,8 @@ certErrorIntro=%S yaroqsiz xavfsizlik sertifikatidan foydalanadi.
 
 certErrorTrust_SelfSigned=Sertifikat ishonchli emas, chunki uni o‘zi kiritgan.
 certErrorTrust_UnknownIssuer=Sertifikat ishonchli emas, chunki sertifikatni beruvchi ma’lum emas.
+certErrorTrust_UnknownIssuer2=Server mos o‘rtacha sertifikatlarni jo‘natayotgan bo‘lishi mumkin.
+certErrorTrust_UnknownIssuer3=Qo‘shimcha asosiy sertifikat import qilinishi kerak bo‘ladi.
 certErrorTrust_CaInvalid=Sertifikat ishonchli emas, chunki u yaroqsiz CA sertifikat tomonidan berilgan.
 certErrorTrust_Issuer=Sertifikat ishonchli emas, chunki sertifikatni beruvchi ishonchli emas.
 certErrorTrust_SignatureAlgorithmDisabled=Ushbu sertifikat ishonchli emas, chunki  xavfsiz bo‘lmagan algoritmdan foydalanib yozilgan imzo bo‘lganligi uchun o‘chirib qo‘yilgan.
