--- a/uz/toolkit/chrome/global/aboutSupport.properties
+++ b/uz/toolkit/chrome/global/aboutSupport.properties
@@ -91,6 +91,7 @@ loadedLibVersions = Foydalanilayotgan versiya
 hasSeccompBPF = Seccomp-BPF (Tizimni chaqirishni filterlash)
 hasSeccompTSync = Seccomp mavzularini sinxronlash
 hasUserNamespaces = Foydalanuvchilar nomlari maydonchalari
+hasPrivilegedUserNamespaces = Imtiyozli jarayonlar uchun foydalanuvchilar nomlari maydonchalari
 canSandboxContent = Kontent sandbokslash jarayoni
 canSandboxMedia = Media plugin Sandbokslash
 
@@ -99,6 +100,8 @@ canSandboxMedia = Media plugin Sandbokslash
 # or 'false')
 multiProcessStatus = %1$S/%2$S (standart: %3$S)
 
+asyncPanZoom = Asinxronlanadigan Nov/Mastshab
+apzNone = yo‘q
 wheelEnabled = g‘ildirak kiritish yoqildi
 touchEnabled = teginib kiritish yoqildi
 
