--- a/uz/toolkit/chrome/global/console.properties
+++ b/uz/toolkit/chrome/global/console.properties
@@ -4,6 +4,7 @@
 
 typeError=Xato:
 typeWarning=Diqqat:
+typeMessage=Xabar:
 errFile=Manba fayl: %S
 errLine=Qator: %S
 errLineCol=Satr: %S, Ustun: %S
