--- a/uz/toolkit/chrome/mozapps/update/updates.properties
+++ b/uz/toolkit/chrome/mozapps/update/updates.properties
@@ -21,7 +21,7 @@ updateMoreInfoContentDownloading=%S %S haqida koʻproq ma`lumot olinmoqda...
 updateNightlyName=%1$S %2$S %3$S tungi
 incompatAddons_major=Ba`zi qoʻshimcha dasturlaringiz %1$S %2$S bilan ishlamaydi, shuning uchun u oʻchirib qoʻyiladi. Ular mos boʻlishi bilan, %1$S yangilanadi va ushbu qoʻshimcha dasturlar qayta yoqib qoʻyiladi:
 incompatAddons_minor=Ba`zi qoʻshimcha dasturlaringiz ushbu yangilanish bilan ishlamaydi, shuning uchun u oʻchirib qoʻyiladi. Ular mos boʻlishi bilan, %1$S yangilanadi va ushbu qoʻshimcha dasturlar qayta yoqib qoʻyiladi:
-intro_major=Hozir %1$S %2$Sga yangilashni xohlaysizmi?
+intro_major=Hozir %2$S brauzerini %1$S versiyasiga yangilashni xohlaysizmi?
 intro_minor=%1$S uchun xavfsiz va ishonchli yangilanish mavjud:
 
 # LOCALIZATION NOTE:
