--- a/uz/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/uz/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -64,3 +64,6 @@ loginsSpielFiltered=Qidiruvingiz boʻyicha quyidagi parollar topildi:
 loginHostAge=%1$S %2$S
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
+noUsername=Foydalanuvchi nomi yo‘q
+duplicateLoginTitle=Login allaqachon mavjud
+duplicateLogin=Login nusxasi ham allaqachon mavjud.
