--- a/uz/security/manager/chrome/pipnss/nsserrors.properties
+++ b/uz/security/manager/chrome/pipnss/nsserrors.properties
@@ -2,6 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+SSL_ERROR_EXPORT_ONLY_SERVER=Xavfsiz ulanishning imkoni bo‘lmadi. Ushbu ulanish yuqori darajali kodlashni qo‘llab-quvvatlay olmaydi.
+SSL_ERROR_US_ONLY_SERVER=Xavfsiz ulanishning imkoni bo‘lmadi. Ulanish qo‘llab-quvvatlanmaydigan yuqori darajali kodlashni talab qilmoqda.
 SSL_ERROR_NO_CYPHER_OVERLAP=Manba bilan xavfsiz ulanib boʻlmadi: umumiy algoritmlar toʻgʻri kelmadi.
 SSL_ERROR_NO_CERTIFICATE=Tasdiqdan oʻtkazish uchun kerakli boʻlgan sertifikat yoki kalit topilmadi.
 SSL_ERROR_BAD_CERTIFICATE=Manba bilan xavfsiz ulanishning imkoni boʻlmadi: manbaning sertifikati rad qilindi.
@@ -11,6 +13,7 @@ SSL_ERROR_UNSUPPORTED_CERTIFICATE_TYPE=Mos kelmaydigan sertifikat turi.
 SSL_ERROR_UNSUPPORTED_VERSION=Manba xavfsiz protokolning qoʻllab-quvvatlanmaydigan versiyasidan foydalanmoqda.
 SSL_ERROR_WRONG_CERTIFICATE=Mijozni tasdiqdan oʻtkazib boʻlmadi: kalit ma`lumotlar bazasidagi shaxsiy kalit sertifikat bazasidagi ommaviy kalit bilan mos kelmadi.
 SSL_ERROR_BAD_CERT_DOMAIN=Manba bilan xavfsiz aloqa oʻrnatib boʻlmadi: soʻralgan domen nomi server sertifikatidagi bilan mos kelmadi.
+SSL_ERROR_POST_WARNING=SSL xato kodini aniqlab bo‘lmadi.
 SSL_ERROR_SSL2_DISABLED=Manba faqat SSL`ning 2-versiyasi bilan ishlaydi, lekin u sizda oʻchirib qoʻyilgan.
 SSL_ERROR_BAD_MAC_READ=SSL xato tasdiqdan oʻtkazish kodi yozuvini qabul qildi.
 SSL_ERROR_BAD_MAC_ALERT=SSL manba xato tasdiqdan oʻtkazish kodi haqida xabar berdi.
@@ -129,6 +132,7 @@ SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Noto‘g‘ri imzo algoritmi raqamli kir
 SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Keyingi protokol inkori yoqib qo‘yilgan, ammo teskari chaqirish kerakli bo‘lishi uchun oldingilari tozalangan.
 SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Server ALPN kengaytmadagi reklama mijozlari protokollarini qo‘llab-quvvatlamaydi.
 SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Server qo‘l siltashni rad qilid, chunki mijoz server qpo‘llab-quvvatlaydigan pastroq STLS versiyasiga yangilangan.
+SSL_ERROR_WEAK_SERVER_CERT_KEY=Server sertifikatiga juda kuchsiz bo‘lgan jamoaviy kalit qo‘shilgan.
 SEC_ERROR_IO=Tasdiqdan o‘tkazish jarayoni davomida I/O xatolik yuz berdi.
 SEC_ERROR_LIBRARY_FAILURE=xavfsizik kutubxonasi xatoligi.
 SEC_ERROR_BAD_DATA=xavfsizlik kutubxonasi: yomon ma’lumotlar qabul qilindi.
@@ -145,6 +149,7 @@ SEC_ERROR_REVOKED_CERTIFICATE=Manbaning sertifikati rad qilindi.
 SEC_ERROR_UNKNOWN_ISSUER=Manbaning sertifikati muallifi aniqlanmadi.
 SEC_ERROR_BAD_KEY=Manbaning ommaviy kaliti noto‘g‘ri.
 SEC_ERROR_BAD_PASSWORD=Kiritilgan xavfsizlik paroli noto‘g‘ri.
+SEC_ERROR_RETRY_PASSWORD=Yangi kiritilgan parol noto‘g‘ri. Yana urinib ko‘ring.
 SEC_ERROR_NO_NODELOCK=xavfsizik kutubxonasi: nodelock yo‘q.
 SEC_ERROR_BAD_DATABASE=xavfsizlik kutubxonasi: yomon ma’lumotlar bazasi.
 SEC_ERROR_NO_MEMORY=xavfsizik kutubxonasi: xotirani joylashtirish amalga oshmadi.
@@ -203,12 +208,19 @@ XP_JAVA_CERT_NOT_EXISTS_ERROR=Tamoyilda sertifikat yo‘q.
 SEC_ERROR_BAD_EXPORT_ALGORITHM=So‘ralgan algoritmga ruxsat berilmaydi.
 SEC_ERROR_EXPORTING_CERTIFICATES=Sertifikatlarni eksport qilishga urinishda xatolik yuz berdi.
 SEC_ERROR_IMPORTING_CERTIFICATES=Sertifikatlarni import qilishga urinishda xatolik yuz berdi.
+SEC_ERROR_PKCS12_UNSUPPORTED_VERSION=Import qilinmadi. Fayl versiyasi mos kelmaydi.
+SEC_ERROR_PKCS12_PRIVACY_PASSWORD_INCORRECT=Import qilinmadi. Maxfiy parol noto‘g‘ri.
+SEC_ERROR_PKCS12_CERT_COLLISION=Import qilinmadi. Ma’lumotlar bazasida xuddi shu nomdagi taxallus allaqachon mavjud.
 SEC_ERROR_USER_CANCELLED=Foydalanuvchi bekor qilishni bosdi.
 SEC_ERROR_PKCS12_DUPLICATE_DATA=Import qilinmadi, allaqachon ma’lumotlar bazasida.
 SEC_ERROR_MESSAGE_SEND_ABORTED=Xabar yuborilmadi.
 SEC_ERROR_INADEQUATE_KEY_USAGE=Sertifikat kalitidan foydalanish uriniladigan jarayon uchun yetarli emas.
 SEC_ERROR_INADEQUATE_CERT_TYPE=Sertifikat turini ilova dastur uchun qo‘llab bo‘lmaydi.
 SEC_ERROR_CERT_ADDR_MISMATCH=Kiritilgan sertifikatdagi manzil xabar bosh qatoridagi manzilga mos kelmadi.
+SEC_ERROR_PKCS12_UNABLE_TO_IMPORT_KEY=Import qilinmadi. Maxfiy kalitni import qilishga urinishda xatolik yuz berdi.
+SEC_ERROR_PKCS12_IMPORTING_CERT_CHAIN=Import qilinmadi. Sertifikat zanjirini import qilishga urinishda xatolik yuz berdi.
+SEC_ERROR_PKCS12_UNABLE_TO_LOCATE_OBJECT_BY_NAME=Eksport qilinmadi. Eksport fayli yoki kalitini taxallusi orqali joylashtirib bo‘lmadi.
+SEC_ERROR_PKCS12_UNABLE_TO_EXPORT_KEY=Eksport qilib bo‘lmadi. Maxsiy kalitni joylashtirib va eksport qilib bo‘lmadi.
 SEC_ERROR_KEYGEN_FAIL=Ommaviy/shaxsiy birlashtirish kodini yaratib bo‘lmadi.
 SEC_ERROR_BAD_NICKNAME=Sertifikat taxallusidan fodalanib kelinmoqda.
 SEC_ERROR_NOT_FORTEZZA_ISSUER=FORTEZZA manbasi zanjirida FORTEZZA bo‘lmagan sertifikat bor.
@@ -288,3 +300,4 @@ MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Server xavfsiz ulanish o‘rnatish uchun 
 MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=Ishonchli yakor bo‘lmagan X.509 1 versiya sertifikati serverning sertifikati muammosi uchun foydalanilmoqda. X.509 1 versiya sertifikatlari eskirgan va boshqa sertifikatlarni yozishda foydalanilmasligi kerak.
 MOZILLA_PKIX_ERROR_NOT_YET_VALID_CERTIFICATE=Server haligacha tasdiqlanmagan sertifikatni ko‘rsatdi.
 MOZILLA_PKIX_ERROR_NOT_YET_VALID_ISSUER_CERTIFICATE=Serverning sertifikati muammosida foydalanilgan, haligacha to‘g‘ri bo‘lmagan sertifkat.\u0020
+MOZILLA_PKIX_ERROR_VALIDITY_TOO_LONG=Server uzoq vaqt yaroqli bo‘lgan sertifikatni ko‘rsatdi.
